fixed navbar, removed horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,14 @@ body, html {
     height: 100%;
     background-color: rgb(228, 228, 228);
     /*width: 100%; */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
   }
 .navbar {
     /*width: 100%; */
     top: 0;
     background-color:  rgb(216, 94, 94);
     box-shadow: 0 12px 6px -6px #999;
+    padding: 0px;
 }
 
 .background {
@@ -27,6 +29,10 @@ body, html {
     height: 30vh;    
 }
 
+.navbar .navbar-nav .nav-link {
+    padding: 1em;
+}
+
 /*.navbar .navbar-nav .nav-link:hover {
     background-color: #850404; -> könnt man einbauen für so nen hover effect, macht aba responsiveness hin :/
     color: white;
@@ -38,6 +44,9 @@ body, html {
     background-color: #850404;
     color: white!important;
     border-radius: 2px;
+}
+.nav-item .active:hover {
+    color: white;
 }
 .nav-link:hover {
     color: white;
